# util-linux

./: CMakeLists.txt
Documentation/: howto-compilation.txt
include/: CMakeLists.txt  c.h
libuuid/: CMakeLists.txt
libuuid/src/: CMakeLists.txt  gen_uuid.c
